Version 0.19 ( )
-------------------------------

- Neil Gierman provided improved Visual Studio 2008 code in bug #1946268

- Bug #1862727 fixed libssh2_poll() to work on windows (by defining
  HAVE_SELECT).

- Based on bug #1815692, we introduce libssh2_sftp_seek2() that allows seeking
  beyond the 2GB margin even on 32bit machines.

- Based on a patch in bug #1878059 by Steven Ayre libssh2 now parses >2GB file
  sizes when downloading SCP files.

- Bug #2064371 pointed out that the SSH2 banner may not use dash ('-'). Reported
  by Bjorn Stenborg.

- Sean Peterson fixed a key re-exchange bug:
  http://daniel.haxx.se/projects/libssh2/mail/libssh2-devel-archive-2008-06/0002.shtml

- Mike Protts filed the bug report #1908724 that identified and fixed a problem
  with SFTP stat on files >4GB in size. Previously it used 32bit math only.

- Removed a stderr debug message that was accidentally left in (bug #1863153)


Version 0.18 (November 11 2007)
-------------------------------

- Various changes that improve non-blocking operations and prevent stalls.
  Especially noticable on Windows since libssh2 just didn't work properly
  non-blocking on Windows before.

- Peter O'Gorman reported how a SCP transfer would hang for him, and it was
  fairly easy reproducable. One bug was in the transport layer, ignoring to
  read more data while there was data left even though it couldn't decrypt the
  data that was left due to it being too little... The other bug was in the
  channel layer, where the libssh2_channel_receive_window_adjust() function
  missed to set the state variables at times and thus this function would
  misbehave on repeated invokes.

- Changed the signature of libssh2_channel_setenv_ex to add const to the
  "varname" parameter (Dan Fandrich)

- Satish Mittal and David J Sullivan fixed an infinit recv() loop in
  libssh2_banner_receive()

Version 0.17 (August 6 2007)
----------------------------
Changes since previous version include:
